# learn-lark

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
learn_lark/: json.lark  json.py  lucene.lark  lucene.py
tests/: test_json.py  test_lucene.py
