[tool.poetry]
name = "learn-lark"
version = "0.1.0"
description = ""
authors = ["Matt Pladna <pladdypants@gmail.com>"]
readme = "README.md"
packages = [{include = "learn_lark"}]

[tool.poetry.dependencies]
python = "3.11"
lark = "^1.1.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
